--- a/pages/styles.css
+++ b/pages/styles.css
@@ -199,3 +199,15 @@ footer {
     from { opacity: 0; transform: translateY(20px); }
     to { opacity: 1; transform: translateY(0); }
 }
+
+/* styles.css */
+img {
+    -webkit-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
+    user-drag: none;
+}
+
+* {
+    user-select: none;
+}
